Fixed a bug where the in memory size was set to 256kb and wouldn't allow for the get mapping to retrieve the image uploaded